# workshops

./: .agents  .gitignore  README.md  flatten.cjs  flatten.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.mastracode/skills/: SKILL.md
08-multi-agent-networks/council-legislative-analysis/: README.md  package.json  tailwind.config.ts
08-multi-agent-networks/supervisor-agents/: .gitignore  README.md  pnpm-lock.yaml  skills-lock.json
agent-harness/: README.md  basic-tui.ts  mc.ts  package.json  server.ts
agent-to-agent/: README.md  package.json
agent-to-agent/crewai-release-agent/: README.md  a2a_server.py  release_changelog_agent.py  requirements.txt
channels-and-browser/: README.md  package.json  tsconfig.json
code-research-agent/: .env.example  README.md  package.json
deckforge/: AGENTS.md  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml
deckforge/cli/: Cargo.toml  config.example.toml
deckforge/cli/src/: config.rs  main.rs
deckforge/cli/src/llm/: anthropic.rs  mod.rs  openai.rs
deckforge/cli/src/slide/: mod.rs
deckforge/docs/: architecture.md  planning.md  requirements.md
deckforge/examples/: sample-deck.md
deckforge/src/: generator.js  (+5 more)
decks/: index.html
enterprise-pipeline/: README.md  pnpm-lock.yaml
guardrails/: README.md  package.json
mastra-101/: README.md  package.json
mastra-code/: basic-tui.ts  package.json  tui.ts
personal-assistant-agent/: README.md  observations.md  package.json
playwright-agent/: package.json
slides/: open-slide.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
(+280 files in other folders)
