[package]
name = "deckforge-enhance"
version = "0.1.0"
edition = "2021"
description = "Model-agnostic LLM enhancement advisor for DeckForge presentations"

[[bin]]
name = "deckforge-enhance"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
toml = "0.8"
dirs = "5"
async-trait = "0.1"
